
         • ‘plot_RLum.Analysis()’:

             • Add argument ‘abline’ to allow inserting similar
               vertical or horizontal lines in every plot. The decision
               to implement this argument in this function instead the
               function ‘plot_RLum.Data.Curve()’ was made because in a
               single plot modus ‘abline’ is more sufficiently used as
               separat function call.

         • ‘plot_RLum.Data.Curve()’:

             • Add argument ‘norm’ to allow for curve normalisation to
               the highest value (#129).

         • ‘plot_RLum.Data.Spectrum()’:

             • Correct an error that caused a chrash when ‘xlim’ was
               set in a way that only one wavelength (colour value) was
               remained,

             • correct zebra-colour-pattern for rare cases of ‘xlim’
               settings using ‘plot.type = "persp"’ or ‘plot.type =
               "persp3d"’,

             • add argument new plot type ‘"transect"’ for plotting a
               transect along the time/temperature axis for a specific
               wavelength/channel intervall (#120, requested by Regina
               DeWitt),

             • correct function break for a single column matrix
               (single frame spectrum) by automatically resetting
               ‘plot.type’ to ‘single’ for single frame spectra,

             • colour rug (‘rug = TRUE’) implemented for plot type
               ‘"multiple.lines"’ (#130),

             • argument ‘xaxis.energy’ for wavelength energy conversion
               for 2D plots added (#141).

         • ‘readBIN2R()’:

             • Integrity checks added to avoid unspecific errors for
               wrong input formats.

  Internals:

         • Add new dependency for package ‘raster’ and ‘sp’, which is
           used for the ‘RLum.Data.Image-class’,

         • dependency to package 'Rserve' removed,

         • dependcy to package 'zoo' added (used for running means).
